--- a/Angular/SocialNetwork/src/app/comment/comment.component.html
+++ b/Angular/SocialNetwork/src/app/comment/comment.component.html
@@ -2,7 +2,7 @@
   <!-- <div [ngStyle]="picture" class="avatar"></div> -->
   <img [src]="image" height="50px" width="50px" alt="" />
   <div class="col-10">
-    {{ comment.firstName + " " + comment.lastName }}
+    {{ comment.username }}
     <hr class="m-0 p-0" />
     {{ comment.body }}
   </div>
