--- a/Angular/SocialNetwork/src/app/password-reset/password-reset.component.html
+++ b/Angular/SocialNetwork/src/app/password-reset/password-reset.component.html
@@ -1,1 +1,47 @@
-<p>password-reset works!</p>
+<form
+  #resetForm="ngForm"
+  (submit)="submitReset(resetForm.value)"
+  class="form-inline"
+>
+  <div class="form-group">
+    <input
+      ngModel
+      class="form-control"
+      #username="ngModel"
+      required
+      placeholder="Username"
+      type="text"
+      name="username"
+    />
+  </div>
+  <div class="form-group">
+    <input
+      ngModel
+      class="form-control"
+      #passwordOld="ngModel"
+      required
+      placeholder="Old Password"
+      type="password"
+      name="passwordOld"
+    />
+  </div>
+  <div class="form-group">
+    <input
+      ngModel
+      class="form-control"
+      #passwordNew="ngModel"
+      required
+      placeholder="New Password"
+      type="password"
+      name="passwordNew"
+    />
+  </div>
+  <div class="form-group">
+    <input
+      class="form-control btn btn-primary"
+      [disabled]="!resetForm.valid"
+      type="submit"
+      value="submit"
+    />
+  </div>
+</form>
