Added comment functionality

--- a/Angular/SocialNetwork/src/app/comment-container/comment-container.component.html
+++ b/Angular/SocialNetwork/src/app/comment-container/comment-container.component.html
@@ -1,6 +1,6 @@
 <div class="">
   <div>
-    <comment-form [user]="user"></comment-form>
+    <comment-form [post]="post" [user]="user"></comment-form>
   </div>
 
   <div *ngFor="let item of comments">
