--- a/Angular/SocialNetwork/src/app/post/post.component.html
+++ b/Angular/SocialNetwork/src/app/post/post.component.html
@@ -41,6 +41,7 @@
 
   <comment-container
     [user]="user"
+    [post]="post"
     [comments]="post.comments"
     *ngIf="showComments"
   ></comment-container>
