--- a/Angular/SocialNetwork/src/app/user-content-input-form/user-content-input-form.component.html
+++ b/Angular/SocialNetwork/src/app/user-content-input-form/user-content-input-form.component.html
@@ -1,4 +1,4 @@
-<div class="row pb-2">
+<div class="row container pb-2">
   <div class="col-3">
     <div class="text-center p-0 m-0 text-nowrap">
       {{ user.firstName + " " + user.lastName }}
@@ -19,20 +19,22 @@
         cols="30"
         rows="4"
       ></textarea>
-      <div class="container row">
-        <div class="form-control col-6">
-          <label for="image" class="text-center"
-            >add image
-            <input
-              (change)="onFileChanged($event)"
-              style="display: none;"
-              type="file"
-              name="image"
-              id="image"
-            />
-          </label>
+      <div class="container">
+        <div class="row">
+          <div class="form-control col-6">
+            <label for="image" class="text-center"
+              >add image
+              <input
+                (change)="onFileChanged($event)"
+                style="display: none;"
+                type="file"
+                name="image"
+                id="image"
+              />
+            </label>
+          </div>
+          <input type="submit" class="form-control col-6" value="submit" />
         </div>
-        <input type="submit" class="form-control col-6" value="submit" />
       </div>
     </form>
   </div>
