search network update

--- a/Angular/SocialNetwork/src/app/search-network/search-network.component.html
+++ b/Angular/SocialNetwork/src/app/search-network/search-network.component.html
@@ -1,12 +1,18 @@
 <div>list all users here</div>
 <div>add button next to their name</div>
 <div>onClick change the focused profile above</div>
-<input type="text">
+<form #searchForm="ngForm" (ngSubmit)="submitSearch(searchForm.value)">
+<input type="text" ngModel #search = "ngModel" name="search">
+
+<button>Submit</button>
+</form>
+<div *ngIf="focus">
 <div *ngFor="let user of users">
 <div class="row">
     <div class="col-3">
         <img [src]="user.picLink" alt="" height="100px" width="100px">
     </div>
     <div class="col-9">{{user.firstName+" "+user.lastName}}</div>
+</div>
 </div>
 </div>
