--- a/Angular/SocialNetwork/src/app/comment-form/comment-form.component.html
+++ b/Angular/SocialNetwork/src/app/comment-form/comment-form.component.html
@@ -5,7 +5,12 @@
         {{ user.username }}
       </div>
       <!-- <div [ngStyle]="picture" class="avatar"></div> -->
-      <img [src]="image" height="100px" width="100px" alt="" />
+      <img
+        [src]="'data:image/jpg;base64,' + user.picLink"
+        height="100px"
+        width="100px"
+        alt=""
+      />
     </div>
 
     <div class="col-9">
