--- a/Angular/SocialNetwork/src/app/like-container/like-container.component.html
+++ b/Angular/SocialNetwork/src/app/like-container/like-container.component.html
@@ -1,10 +1,10 @@
 <div class=" ">
   <button
     class="btn ht2 p-0 btn-block"
-    [class.btn-secondary]="!isSelected"
-    [class.btn-success]="isSelected"
+    [class.btn-secondary]="!post.isLiked"
+    [class.btn-success]="post.isLiked"
     (click)="onClick()"
   >
-    {{ likeCount }} Likes
+    {{ post.likeCount }} Likes
   </button>
 </div>
