--- a/Angular/SocialNetwork/src/app/post-container/post-container.component.html
+++ b/Angular/SocialNetwork/src/app/post-container/post-container.component.html
@@ -1,4 +1,9 @@
 <div id="postContainer" class="">
   <post-form [user]="user"></post-form>
-  <post-container-feed [user]="user" [postFeed]="posts"></post-container-feed>
+  <div *ngIf="isLoading">loading...</div>
+  <post-container-feed
+    *ngIf="!isLoading"
+    [user]="user"
+    [postFeed]="posts"
+  ></post-container-feed>
 </div>
