--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -59,7 +59,10 @@
           <h4 class="text-center">Scroll through our friends</h4>
           <div class="scrollList">
             <div *ngFor="let item of users">
-              <button class="btn btn-block btn-secondary" href="#">
+              <button
+                (click)="changeFocus(item)"
+                class="btn btn-block btn-secondary"
+              >
                 {{ item.username }}
               </button>
             </div>
