fixed adding a post so it works now

--- a/Angular/SocialNetwork/src/app/comments-toggle/comments-toggle.component.html
+++ b/Angular/SocialNetwork/src/app/comments-toggle/comments-toggle.component.html
@@ -6,6 +6,6 @@
     (click)="onClick()"
   >
     <span *ngIf="length == 0">Comment</span>
-    <span *ngIf="length > 0">{{ "Fix this" }}Comment</span>
+    <span *ngIf="length > 0"><!--{{ "Fix this" }}-->Comment</span>
   </button>
 </div>
