added Post instant unshift feature

--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -85,6 +85,7 @@
               [isLoading]="isLoading"
               [user]="user"
               [postFeed]="posts"
+              (newPost)="pushPost($event)"
             ></post-container>
           </div>
         </ng-template>
