--- a/Angular/SocialNetwork/src/app/update-profile/update-profile.component.html
+++ b/Angular/SocialNetwork/src/app/update-profile/update-profile.component.html
@@ -31,122 +31,25 @@
       </form>
     </div>
   </div>
-  <div class="col-8">
-    <div class="row">
-      <label for="fNameUpdate">
-        First Name <span *ngIf="!edit">{{ user.firstName }}</span>
-        <input [value]="user.firstName"
-          *ngIf="edit"
-          type="text"
-          id="fNameUpdate"
-        />
-      </label>
-    </div>
-    <div class="row">
-      <label for="lNameUpdate">
-        Last Name <span *ngIf="!edit">{{ user.lastName }}</span>
-        <input [value]="user.lastName"
-          *ngIf="edit" 
-          type="text" 
-          id="lNameUpdate" />
-      </label>
-    </div>
-    <div class="row">
-      <label for="emailUpdate">
-        Email <span>{{ user.email }}</span>
-        <!-- <input [value]="user.email" 
-          type="text" 
-          id="emailUpdate" /> -->
-      </label>
-    </div>
-    <div class="row">
-      <label for="unUpdate">
-        Username <span>{{ user.username }}</span>
-        <!-- <input [value]="user.username" 
-          type="text" 
-          id="unUpdate" /> -->
-      </label>
-    </div>
-
-    <div class="row">
-      <label for="bioUpdate">
-        About Me <br />
-        <textarea
-          [value]="user.aboutMe"
-          name="bioUpdate"
-          id="bioUpdate"
-          cols="50"
-          rows="4"
-        ></textarea>
-      </label>
-    </div>
-    <button (click)="toggleEdit()">Make/Cancel Changes</button>
-    <input type="button" id="submitUpdate" value="Submit Changes" />
-  </div>
+ 
+<div class="UserInfo" id="userrInfo">
+  First Name : {{user.firstName}}
+  <br>
+  Last Name : {{user.lastName}}
+  <br>
+  Username : {{user.username}}
+  <br>
+  Email : {{user.email}}
+  <br>
+  Bio : {{user.bio}}
 </div>
-
-<!--is it easier to have the submit changes at the bottom of the page
-            or a separate one for each field? will the submit at the bottom 
-            allow for only changing certain fields? or would it be better to
-            just do it separately for each field (like individual SQL
-            statements?-->
-<!--my thought is to not include the nav-bar menu on the left here, 
-            that when they click "update profile" it brings them to this 
-            page and they either change info or click cancel. choosing 
-            either submit or cancel will then take them back to their 
-            profile page-->
-
-<!-- <!DOCTYPE html>
-            <html>
-                <head> </head>
-                <body>
-                    <h1>Update Profile</h1>
-                </br>
-                </br>
-                    <div>
-                        <h2 style="font-size:large">Update Profile Picture</h2>
-                    </br>
-                        <img src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Profile Picture" height="350" width="250"/>
-                    </br>
-                        <input type="file" id="imgUpdate" value="Browse" accept="image/*">
-                    </div>
-                </br>
-                </br>
-                    <div>
-                        <h2 style="font-size:large">Update Profile Information</h2>
-                    </br>
-                    </br>
-                        <label>Update Username</label>
-                    </br>
-                        <input type="text" id="unUpdate">
-                    </br>
-                    </br>
-                        <label>Update First Name</label>
-                    </br>
-                        <input type="text" id="fNameUpdate">
-                    </br>
-                    </br>
-                        <label>Update Last Name</label>
-                    </br>
-                        <input type="text" id="lNameUpdate">
-                    </br>
-                    </br>
-                        <!--change this to whatever we call the password reset-->
-<!-- <label>Change Password</label>
-                    </br>
-                        <input type="text" id="passChange">
-                    </br>
-                    </br>
-                        <label for="bioUpdate">Update About Me</label>
-                    </br>
-                        <textarea id="bioUpdate" name="bioUpdate" rows="4" cols="50"></textarea>
-                    </br>
-                    </br>
-                    </br>
-                    </br>
-                    </br>
-                        <input type="button" id="submitUpdate" value="Submit Changes">
-                        <input type="button" id="cancelUpdate" value="Cancel">
-                    </div> -->
-<!-- </body>
-            </html> -->
+<div class="UpdateInfo" id="updateInfoo">
+  <p>Update User Information</p>
+  <input type="text" placeholder="First Name" id="fName">
+  <br>
+  <input type="text" placeholder="Last Name" id="lName">
+  <br>
+  <textarea placeholder="Bio" rows="4" cols="50" id="thebio"></textarea>
+  <br>
+  <button type="submit" (click)="updateUserInfo()">Submit Changes</button>
+</div>
