--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -97,6 +97,9 @@
         <ng-template [ngSwitchCase]="'SearchNetwork'">
           <div class="">
             <profile-information [focus]="focus"></profile-information>
+            <div *ngFor="let post of focusPosts">
+              <focused-user-posts [post]="post"></focused-user-posts>
+            </div>
           </div>
         </ng-template>
       </div>
