search network update

--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -70,7 +70,7 @@
         </div>
         <div *ngIf="tab == 'search'">
           <search-network
-            (changFocus)="changeFocus($event)"
+            (changeFocus)="changeFocus($event)"
             [users]="users"
           ></search-network>
         </div>
