--- a/Angular/SocialNetwork/src/app/search-network/search-network.component.html
+++ b/Angular/SocialNetwork/src/app/search-network/search-network.component.html
@@ -16,9 +16,12 @@
         width="100"
         alt=""
       />
-      Andres include whatever you want here just make it clickable and make it
+      <button (click)="selectNewFocus(users)" class="btn btn-block btn-secondary">
+          View Posts
+      </button>
+     <!-- Andres include whatever you want here just make it clickable and make it
       call the selectNewFocus function with their user info in it. Delete this
-      when you want.
+      when you want.-->
     </div>
   </div>
 </div>
