Started final css

--- a/Angular/SocialNetwork/src/app/comment-container/comment-container.component.html
+++ b/Angular/SocialNetwork/src/app/comment-container/comment-container.component.html
@@ -3,7 +3,7 @@
     <comment-form [post]="post" [user]="user"></comment-form>
   </div>
 
-  <div *ngFor="let item of comments">
+  <div class="container" *ngFor="let item of comments">
     <comment [in]="item"></comment>
   </div>
 </div>
