--- a/Angular/SocialNetwork/src/app/user-content-input-form/user-content-input-form.component.html
+++ b/Angular/SocialNetwork/src/app/user-content-input-form/user-content-input-form.component.html
@@ -1,7 +1,7 @@
 <div class="row container pb-2">
-  <div class="col-3">
+  <div class="col-3 text-center">
     <div class="text-center p-0 m-0 text-nowrap">
-      {{ user.firstName + " " + user.lastName }}
+      {{ user.username }}
     </div>
     <!-- <div [ngStyle]="picture" class="avatar"></div> -->
     <img
