--- a/Angular/SocialNetwork/src/app/comment/comment.component.html
+++ b/Angular/SocialNetwork/src/app/comment/comment.component.html
@@ -1,14 +1,17 @@
-<div class="row border rounded">
-  <!-- <div [ngStyle]="picture" class="avatar"></div> -->
-  <img
-    [src]="'data:image/jpg;base64,' + comment.picLink"
-    height="50px"
-    width="50px"
-    alt=""
-  />
-  <div class="col-10">
-    {{ comment.username }}
-    <hr class="m-0 p-0" />
-    {{ comment.body }}
+<div class="row pt-1 pb-1">
+  <div class="row container comment-borders m-auto">
+    <div class="col-2">
+      <img
+        [src]="'data:image/jpg;base64,' + comment.picLink"
+        height="50px"
+        width="50px"
+        alt=""
+      />
+    </div>
+    <div class="col-10">
+      {{ comment.username }}
+      <hr class="m-0 p-0" />
+      {{ comment.body }}
+    </div>
   </div>
 </div>
