--- a/Angular/SocialNetwork/src/app/login-page/login-page.component.css
+++ b/Angular/SocialNetwork/src/app/login-page/login-page.component.css
@@ -1,3 +1,27 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+}
+.shadow1 {
+  box-shadow: 2px 2px 5px grey;
+}
+.inLine {
+  padding: 0.375rem 0.75rem;
+  width: 100%;
+  display: inline-flex;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.inLine:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
