--- a/Angular/SocialNetwork/src/app/profile-information/profile-information.component.html
+++ b/Angular/SocialNetwork/src/app/profile-information/profile-information.component.html
@@ -5,7 +5,20 @@
     <form>
       <div class="row container">
         <!-- <div [ngStyle]="picture" class="avatar"></div> -->
-        <img [src]="image" height="100px" width="100px" alt="" />
+        <img
+          *ngIf="!user.picLink"
+          [src]="image"
+          height="100px"
+          width="100px"
+          alt=""
+        />
+        <img
+          *ngIf="user.picLink"
+          [src]="'data:image/jpg;base64,' + user.picLink"
+          height="100px"
+          width="100px"
+          alt=""
+        />
       </div>
       <div class="row container">
         <p class="text-center">
