--- a/Angular/SocialNetwork/src/app/search-network/search-network.component.css
+++ b/Angular/SocialNetwork/src/app/search-network/search-network.component.css
@@ -1,5 +1,9 @@
 .btn {
     position: relative;
-    top: 15%;
-    left: 22%;
+    top: 20%;
+    left: 30%;
+    width: 100%;
 }
+input {
+    width: 100%;
+  }
